--- a/Main/index.html
+++ b/Main/index.html
@@ -5,26 +5,15 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <main class="page-content">
-	    <div class="card">
-	        <div class="content">
-	            <h2 class="title">Class 5</h2>
-	            <p class="copy">Some Fun Activities For You</p><a href="https://class9a.github.io/Class5/">  <button class="btn">here</button></a></div>
-	    </div>
-	    <div class="card">
-	        <div class="content">
-	            <h2 class="title">Class 6</h2>
-	            <p class="copy">Some Fun Activities For You</p><a href="https://class9a.github.io/Class6/">  <button class="btn">here</button></a></div>
-    </div>
     <div class="card">
         <div class="content">
             <h2 class="title">Class 7</h2>
-            <p class="copy">Some Fun Activities For You of</p><a href="https://class9a.github.io/Class7/">  <button class="btn">here</button></a></div>
+            <p class="copy">Let's Go</p><a href="https://class9a.github.io/Class7/">  <button class="btn">Click Here</button></a></div>
     </div>
     <div class="card">
         <div class="content">
             <h2 class="title">Class 8</h2>
-            <p class="copy">Some Fun Activities For You</p><a href="https://class9a.github.io/Class8/">  <button class="btn">here</button></a></div>
+            <p class="copy">Let's Go!!</p><a href="https://class9a.github.io/Class8/">  <button class="btn">Click Here</button></a></div>
     </div>
-
-    </a></h1>
+ 	
 </main>
